--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/server.js",
-    "dev": "nodemon --ext ts --exec ts-node src/server.ts"
+    "dev": "nodemon --ext ts --exec ts-node src/server.ts",
+    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,css,scss,md,html}\""
   },
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
@@ -16,6 +17,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.18.2",
     "mongoose": "^6.8.0",
+    "prettier": "^3.5.3",
     "puppeteer": "^20.0.0",
     "winston": "^3.17.0"
   },
