--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -2,6 +2,7 @@
   "functions": {
     "api/scheduled/fetchAndSummarize.ts": {
       "runtime": "nodejs18.x",
+      "includeFiles": "src/schedule/**",
       "schedule": "0 6,18 * * *"
     }
   }
