--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,9 @@
     "mongoose": "^6.8.0",
     "prettier": "^3.5.3",
     "puppeteer": "^20.0.0",
+    "serve-favicon": "^2.5.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "winston": "^3.17.0"
   },
   "devDependencies": {
@@ -26,6 +29,9 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.13",
     "@types/node": "^18.0.0",
+    "@types/serve-favicon": "^2.5.7",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.0"
