--- a/backend/package.json
+++ b/backend/package.json
@@ -12,20 +12,17 @@
     "@google/generative-ai": "^0.21.0",
     "@vercel/node": "^5.1.10",
     "axios": "^1.2.0",
-    "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.2",
     "mongoose": "^6.8.0",
     "prettier": "^3.5.3",
-    "puppeteer": "^20.0.0",
     "serve-favicon": "^2.5.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "winston": "^3.17.0"
   },
   "devDependencies": {
-    "@types/cheerio": "^0.22.30",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.13",
     "@types/node": "^18.0.0",
@@ -35,5 +32,8 @@
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.0"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
