--- a/crawler/package.json
+++ b/crawler/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.0",
   "main": "dist/schedule/fetchAndSummarize.js",
   "scripts": {
-    "build": "tsc",
-    "start": "node dist/schedule/fetchAndSummarize.js",
-    "dev": "ts-node schedule/fetchAndSummarize.ts"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,css,scss,md,html}\""
   },
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
@@ -15,12 +17,15 @@
     "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.0.0",
     "mongoose": "^6.8.0",
+    "next": "^15.2.1",
+    "prettier": "^3.5.3",
     "puppeteer-core": "^24.4.0",
     "winston": "^3.17.0"
   },
   "devDependencies": {
     "@types/cheerio": "^0.22.30",
     "@types/node": "^18.0.0",
+    "@types/react": "19.0.10",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.0"
   },
