--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "format": "npm run lint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
+    "@sparticuz/chromium": "^133.0.0",
+    "@vercel/node": "^5.1.11",
     "axios": "^1.2.0",
+    "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.2",
@@ -29,6 +33,7 @@
     "mongoose": "^6.8.0",
     "next": "15.2.1",
     "prettier": "^3.5.3",
+    "puppeteer-core": "^24.4.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
@@ -37,18 +42,15 @@
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "tailwindcss": "^4",
-    "winston": "^3.17.0",
-    "@google/generative-ai": "^0.21.0",
-    "@vercel/node": "^5.1.11",
-    "cheerio": "^1.0.0-rc.12",
-    "@sparticuz/chromium": "^133.0.0",
-    "puppeteer-core": "^24.4.0"
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "@types/cors": "^2.8.17",
+    "@types/bcrypt": "^5.0.2",
     "@types/cheerio": "^0.22.30",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
