--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,css,scss,md,html}\""
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "lucide-react": "^0.477.0",
     "next": "15.2.1",
     "prettier": "^3.5.3",
