--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,10 @@
     "build": "tsc",
     "start": "node dist/server.js",
     "dev": "nodemon --ext ts --exec ts-node src/server.ts",
-    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,css,scss,md,html}\""
+    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,css,scss,md,html}\"",
+    "test": "jest --config jest.config.js --runInBand",
+    "test:watch": "jest --config jest.config.js --watch",
+    "test:coverage": "jest --config jest.config.js --coverage"
   },
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
@@ -28,12 +31,18 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.13",
+    "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^18.0.0",
     "@types/serve-favicon": "^2.5.7",
+    "@types/supertest": "^6.0.3",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
+    "jest": "^29.7.0",
+    "mongodb-memory-server": "^10.1.4",
     "nodemon": "^2.0.22",
+    "supertest": "^7.1.1",
+    "ts-jest": "^29.3.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.0"
   },
