--- a/crawler/package.json
+++ b/crawler/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,css,scss,md,html}\"",
-    "crawl": "npx ts-node schedule/fetchAndSummarize.ts"
+    "crawl": "npx ts-node schedule/fetchAndSummarize.ts",
+    "test": "jest --config jest.config.js --runInBand"
   },
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
