--- a/package.json
+++ b/package.json
@@ -1,22 +1,35 @@
 {
   "name": "ai-article-content-curator",
-  "version": "1.0.0",
-  "private": true,
+  "description": "AI Article Content Curator - A web application that curates and summarizes articles using AI.",
+  "version": "1.1.0",
+  "private": false,
   "workspaces": [
     "frontend",
     "backend",
     "crawler"
   ],
+  "bin": {
+    "aicc": "./bin/aicc.js"
+  },
+  "author": "Son Nguyen",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/hoangsonww/AI-Gov-Content-Curator.git"
+  },
+  "bugs": {
+    "url": "https://github.com/hoangsonww/AI-Gov-Content-Curator/issues"
+  },
   "scripts": {
-    "dev:frontend": "yarn workspace frontend dev",
-    "build:frontend": "yarn workspace frontend build",
-    "start:frontend": "yarn workspace frontend start",
-    "dev:backend": "yarn workspace backend dev",
-    "build:backend": "yarn workspace backend build",
-    "start:backend": "yarn workspace backend start",
-    "dev:crawler": "yarn workspace crawler dev",
-    "build:crawler": "yarn workspace crawler build",
-    "start:crawler": "yarn workspace crawler start",
+    "dev:frontend": "cd frontend && npm run dev",
+    "build:frontend": "cd frontend && npm run build",
+    "start:frontend": "cd frontend && npm run start",
+    "dev:backend": "cd backend && npm run dev",
+    "build:backend": "cd backend && npm run build",
+    "start:backend": "cd backend && npm run start",
+    "dev:crawler": "cd crawler && npm run dev",
+    "build:crawler": "cd crawler && npm run build",
+    "start:crawler": "cd crawler && npm run start",
     "lint": "prettier --write \"**/*.{ts,tsx,js,jsx,json,css,scss,md,html}\"",
     "format": "npm run lint"
   },
@@ -24,8 +37,9 @@
     "@google/generative-ai": "^0.21.0",
     "@sparticuz/chromium": "^133.0.0",
     "@vercel/node": "^5.1.11",
-    "axios": "^1.2.0",
+    "axios": "^1.9.0",
     "cheerio": "^1.0.0-rc.12",
+    "commander": "^13.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.2",
