--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -25,25 +25,19 @@ jobs:
         run: npm ci
         continue-on-error: true
 
-      - name: Format (Prettier)
+      - name: Prettier format
         run: npm run format
         continue-on-error: true
 
-      - name: Lint (ESLint)
+      - name: ESLint lint
         run: npm run lint
-        continue-on-error: true
-
-      - name: Dependency review
-        uses: actions/dependency-review-action@v2
-        continue-on-error: true
-
-      - name: Security audit
-        run: npm audit --audit-level=high
         continue-on-error: true
 
   backend:
     name: "✅ Backend Build & Test"
     runs-on: ubuntu-latest
+    needs: [formatting]
+    if: ${{ always() }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -76,8 +70,10 @@ jobs:
         continue-on-error: true
 
   frontend:
-    name: "🌐 Frontend Build & E2E"
+    name: "🌐 Frontend Build & Test"
     runs-on: ubuntu-latest
+    needs: [backend]
+    if: ${{ always() }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -105,17 +101,23 @@ jobs:
         run: npm --workspace frontend run build
         continue-on-error: true
 
+      - name: Frontend tests
+        run: npm --workspace frontend run test:unit
+        continue-on-error: true
+
       - name: Install Playwright browsers
         run: npm --workspace frontend exec playwright install --with-deps
         continue-on-error: true
 
-      - name: Frontend E2E tests
+      - name: Frontend E2E
         run: npm --workspace frontend run test:e2e
         continue-on-error: true
 
   crawler:
     name: "🤖 Crawler Build & Run"
     runs-on: ubuntu-latest
+    needs: [frontend]
+    if: ${{ always() }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -143,38 +145,15 @@ jobs:
         run: npm --workspace crawler run build
         continue-on-error: true
 
-      - name: Run crawler job
+      - name: Run crawl job
         run: npm --workspace crawler run crawl
         continue-on-error: true
 
-  docs:
-    name: "📚 Documentation"
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-        continue-on-error: true
-
-      - name: Generate docs
-        run: npm run docs
-        continue-on-error: true
-
-  security:
-    name: "🔒 Security Scan"
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-        continue-on-error: true
-
-      - name: Run security scan
-        run: npm run security-scan
-        continue-on-error: true
-
-  final:
+  complete:
     name: "🎉 Pipeline Complete"
     runs-on: ubuntu-latest
-    needs: [formatting, backend, frontend, crawler, docs, security]
+    needs: [formatting, backend, frontend, crawler]
+    if: ${{ always() }}
     steps:
       - name: Final status
         run: echo "✅ CI/CD pipeline finished successfully."
