--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,11 @@
-MONGODB_URI=<YOUR_MONGODB_CONNECTION_STRING>
-GOOGLE_AI_API_KEY=<YOUR_GOOGLE_AI_API_KEY>
-AI_INSTRUCTIONS="Summarize the articles concisely and naturally"
-NEWS_API_KEY=<YOUR_NEWS_API_KEY>
+MONGODB_URI=<your_mongodb_uri>
+GOOGLE_AI_API_KEY=<your_google_ai_api_key>
+GOOGLE_AI_API_KEY1=<your_google_ai_api_key1>
+GOOGLE_AI_API_KEY2=<your_google_ai_api_key2>
+GOOGLE_AI_API_KEY3=<your_google_ai_api_key3>
+AI_INSTRUCTIONS=Summarize the articles concisely and naturally (change if needed)
+NEWS_API_KEY=<your_news_api_key>
+NEWS_API_KEY1=<your_news_api_key1>
 PORT=3000
-CRAWL_URLS="https://www.whitehouse.gov/briefing-room/,https://www.congress.gov/,https://www.state.gov/press-releases/,https://www.bbc.com/news,https://www.nytimes.com/"
-JWT_SECRET=<YOUR_SECURE_JWT_SECRET>
+CRAWL_URLS=https://www.state.gov/press-releases/,https://www.bbc.com/news,https://www.nytimes.com/,https://www.dallasnews.com/news/,https://www.houstonchronicle.com/,,https://www.whitehouse.gov/briefing-room/,https://www.congress.gov/,https://www.statesman.com/news/politics-elections/
+AICC_API_URL=https://ai-content-curator-backend.vercel.app/
