--- a/crawler/package.json
+++ b/crawler/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,css,scss,md,html}\"",
     "crawl": "npx ts-node schedule/fetchAndSummarize.ts",
-    "test": "jest --config jest.config.js --runInBand"
+    "fetch:past": "npx ts-node scripts/fetchPastArticles.ts",
+    "fetch:latest": "npx ts-node scripts/fetchLatestArticles.ts",
+    "test": "jest --config jest.config.js --runInBand",
+    "clean:articles": "npx ts-node scripts/cleanData.ts"
   },
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
@@ -21,6 +24,7 @@
     "mongoose": "^6.8.0",
     "next": "^15.2.1",
     "prettier": "^3.5.3",
+    "puppeteer": "^24.8.2",
     "puppeteer-core": "^24.4.0",
     "winston": "^3.17.0"
   },
