--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "serve-favicon": "^2.5.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
+    "validator": "^13.15.0",
     "winston": "^3.17.0"
   },
   "devDependencies": {
@@ -38,6 +39,7 @@
     "@types/supertest": "^6.0.3",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
+    "@types/validator": "^13.15.0",
     "jest": "^29.7.0",
     "mongodb-memory-server": "^10.1.4",
     "nodemon": "^2.0.22",
