--- a/crawler/package.json
+++ b/crawler/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^16.0.0",
     "mongoose": "^6.8.0",
     "next": "^15.2.1",
+    "nodemailer": "^7.0.3",
     "prettier": "^3.5.3",
     "puppeteer": "^24.8.2",
     "puppeteer-core": "^24.4.0",
