--- a/crawler/vercel.json
+++ b/crawler/vercel.json
@@ -10,6 +10,10 @@
     {
       "path": "/api/scheduled/fetchAndSummarize",
       "schedule": "0 6 * * *"
+    },
+    {
+      "path": "/api/scheduled/cleanArticles",
+      "schedule": "10 6 * * *"
     }
   ]
 }
