--- a/package.json
+++ b/package.json
@@ -36,16 +36,17 @@
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
     "@sparticuz/chromium": "^133.0.0",
-    "@vercel/node": "^5.1.11",
+    "@vercel/node": "^5.1.16",
     "axios": "^1.9.0",
     "cheerio": "^1.0.0-rc.12",
     "commander": "^13.1.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.0",
+    "dotenv": "^16.5.0",
     "express": "^4.18.2",
     "lucide-react": "^0.477.0",
-    "mongoose": "^6.8.0",
+    "mongoose": "^6.13.8",
     "next": "15.2.1",
+    "nodemailer": "^7.0.3",
     "prettier": "^3.5.3",
     "puppeteer-core": "^24.4.0",
     "react": "^19.0.0",
