--- a/newsletters/package.json
+++ b/newsletters/package.json
@@ -24,7 +24,7 @@
     "start": "next start",
     "newsletter": "npx ts-node --transpile-only schedule/sendNewsletter.ts",
     "send": "node dist/schedule/sendNewsletter.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
     "@vercel/node": "^5.1.16",
