--- a/newsletters/vercel.json
+++ b/newsletters/vercel.json
@@ -1,8 +1,6 @@
 {
   "version": 2,
-  "builds": [
-    { "src": "package.json", "use": "@vercel/next" }
-  ],
+  "builds": [{ "src": "package.json", "use": "@vercel/next" }],
   "crons": [
     {
       "path": "/api/scheduled/sendNewsletter",
