--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,11 +9,11 @@ services:
       - "3000:3000"
     environment:
       PORT: "3000"
-      MONGODB_URI: "your_production_mongodb_connection_string"
-      GOOGLE_AI_API_KEY: "your_google_ai_api_key"
-      AI_INSTRUCTIONS: "Your system instructions for Gemini AI"
-      NEWS_API_KEY: "your_newsapi_key"
-      CRAWL_URLS: "https://www.whitehouse.gov/briefing-room/,https://www.congress.gov/,https://www.state.gov/press-releases/,https://www.bbc.com/news,https://www.nytimes.com/"
+      MONGODB_URI: "${MONGODB_URI}"
+      GOOGLE_AI_API_KEY: "${GOOGLE_AI_API_KEY}"
+      AI_INSTRUCTIONS: "${AI_INSTRUCTIONS}"
+      NEWS_API_KEY: "${NEWS_API_KEY}"
+      CRAWL_URLS: "${CRAWL_URLS}"
     restart: unless-stopped
 
   frontend:
@@ -23,7 +23,7 @@ services:
     ports:
       - "3001:3000"
     environment:
-      NEXT_PUBLIC_API_URL: "http://localhost:3000"  # Adjust as needed to point to the backend
+      NEXT_PUBLIC_API_URL: "http://localhost:3000"
     restart: unless-stopped
 
   crawler:
@@ -34,9 +34,28 @@ services:
       - "3002:3000"
     environment:
       PORT: "3000"
-      MONGODB_URI: "your_mongodb_connection_string"
-      GOOGLE_AI_API_KEY: "your_google_ai_api_key"
-      AI_INSTRUCTIONS: "Your system instructions for Gemini AI"
-      NEWS_API_KEY: "your_newsapi_key"
-      CRAWL_URLS: "https://www.whitehouse.gov/briefing-room/,https://www.congress.gov/,https://www.state.gov/press-releases/,https://www.bbc.com/news,https://www.nytimes.com/"
+      MONGODB_URI: "${MONGODB_URI}"
+      GOOGLE_AI_API_KEY: "${GOOGLE_AI_API_KEY}"
+      GOOGLE_AI_API_KEY1: "${GOOGLE_AI_API_KEY1}"
+      GOOGLE_AI_API_KEY2: "${GOOGLE_AI_API_KEY2}"
+      GOOGLE_AI_API_KEY3: "${GOOGLE_AI_API_KEY3}"
+      AI_INSTRUCTIONS: "${AI_INSTRUCTIONS}"
+      NEWS_API_KEY: "${NEWS_API_KEY}"
+      NEWS_API_KEY1: "${NEWS_API_KEY1}"
+      CRAWL_URLS: "${CRAWL_URLS}"
+    restart: unless-stopped
+
+  newsletters:
+    build:
+      context: ./newsletters
+      dockerfile: Dockerfile
+    ports:
+      - "3003:3000"
+    environment:
+      PORT: "3000"
+      MONGODB_URI: "${MONGODB_URI}"
+      RESEND_API_KEY: "${RESEND_API_KEY}"
+      RESEND_FROM: "${RESEND_FROM}"
+      UNSUBSCRIBE_BASE_URL: "${UNSUBSCRIBE_BASE_URL}"
+      AICC_API_URL: "${AICC_API_URL}"
     restart: unless-stopped
