--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,14 +14,19 @@
   },
   "dependencies": {
     "@vercel/analytics": "^1.5.0",
+    "framer-motion": "^12.12.1",
     "lucide-react": "^0.477.0",
     "next": "15.2.1",
     "prettier": "^3.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-slick": "^0.30.3",
     "react-toastify": "^11.0.5",
+    "rehype-katex": "^7.0.1",
+    "remark-gfm": "^4.0.1",
+    "remark-math": "^6.0.0",
     "slick-carousel": "^1.8.1",
     "swr": "^2.3.3"
   },
@@ -32,7 +37,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-slick": "^0.23.13",
-    "tailwindcss": "^4",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.8.2"
   }
 }
