feat(ui/ai/crawler): add newsletters feature, AI Q&A chat, and minor bug fixes

--- a/package.json
+++ b/package.json
@@ -20,6 +20,35 @@
   "bugs": {
     "url": "https://github.com/hoangsonww/AI-Gov-Content-Curator/issues"
   },
+  "keywords": [
+    "AI",
+    "Article",
+    "Content",
+    "Curator",
+    "Web",
+    "Application",
+    "Summarization",
+    "Crawler",
+    "Web Scraping",
+    "Generative AI",
+    "Natural Language Processing",
+    "Machine Learning",
+    "Node.js",
+    "React",
+    "Express",
+    "MongoDB",
+    "Tailwind CSS",
+    "Next.js",
+    "Chromium",
+    "Puppeteer",
+    "Axios",
+    "Cheerio",
+    "Nodemailer",
+    "Swagger",
+    "OpenAPI",
+    "Documentation",
+    "API"
+  ],
   "scripts": {
     "dev:frontend": "cd frontend && npm run dev",
     "build:frontend": "cd frontend && npm run build",
