--- a/newsletters/package.json
+++ b/newsletters/package.json
@@ -24,12 +24,13 @@
     "start": "next start",
     "newsletter": "npx ts-node --transpile-only schedule/sendNewsletter.ts",
     "send": "node dist/schedule/sendNewsletter.js",
-    "test": "echo \"No test specified\" && exit 0",
+    "test": "jest --coverage",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,css,scss,md,html}\""
   },
   "dependencies": {
     "@vercel/node": "^5.1.16",
     "dotenv": "^16.5.0",
+    "marked": "^15.0.11",
     "mongoose": "^8.15.0",
     "next": "^15.3.2",
     "nodemailer": "^7.0.3",
@@ -38,11 +39,18 @@
     "resend": "^4.5.1"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.14",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^19.1.4",
     "@types/react-dom": "^19.1.5",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.3.4",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.4",
     "typescript": "^5.5.0"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node"
   }
 }
