--- a/newsletters/package.json
+++ b/newsletters/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "newsletters",
+  "name": "government-article-curator-newsletter",
   "description": "Daily newsletter service for AI Article Content Curator.",
   "version": "1.0.0",
   "main": "index.js",
