--- a/backend/package.json
+++ b/backend/package.json
@@ -13,11 +13,12 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
+    "@pinecone-database/pinecone": "^6.1.1",
     "@vercel/node": "^5.1.10",
     "axios": "^1.2.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.0",
+    "dotenv": "^16.5.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^6.8.0",
