--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ai-article-content-curator",
-  "description": "AI Article Content Curator - A web application that curates and summarizes articles using AI.",
+  "description": "SynthoraAI - AI Article Content Curator - A web application that curates and summarizes articles using AI.",
   "version": "1.1.0",
   "private": false,
   "workspaces": [
