feat(ui/ai/crawler): add newsletters feature, AI Q&A chat, comments, and minor bug fixes

--- a/newsletters/package.json
+++ b/newsletters/package.json
@@ -1,6 +1,6 @@
 {
   "name": "government-article-curator-newsletter",
-  "description": "Daily newsletter service for AI Article Content Curator.",
+  "description": "Daily newsletter service for SynthoraAI - AI Article Content Curator.",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
