--- a/crawler/tsconfig.json
+++ b/crawler/tsconfig.json
@@ -16,7 +16,8 @@
     "incremental": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "types": ["node", "jest"]
   },
   "include": ["*"],
   "exclude": ["node_modules"]
