--- a/newsletters/package.json
+++ b/newsletters/package.json
@@ -24,7 +24,9 @@
     "start": "next start",
     "newsletter": "npx ts-node --transpile-only schedule/sendNewsletter.ts",
     "send": "node dist/schedule/sendNewsletter.js",
-    "test": "jest --coverage",
+    "test": "jest --config jest.config.js",
+    "test:watch": "jest --config jest.config.js --watch",
+    "test:coverage": "jest --config jest.config.js --coverage",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,css,scss,md,html}\"",
     "clean:articles": "npx ts-node scripts/cleanData.ts"
   },
