feat(test): add enhanced testing for monorepo

--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "start:crawler": "cd crawler && npm run start",
     "lint": "prettier --write \"**/*.{ts,tsx,js,jsx,json,css,scss,md,html}\"",
     "format": "npm run lint",
-    "prepare": "husky install"
+    "prepare": "if [ \"$NODE_ENV\" = \"development\" ]; then husky install; fi"
   },
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
