feat(ci/cd): update ci/cd QA pipeline

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "workspaces": [
     "frontend",
     "backend",
-    "crawler"
+    "crawler",
+    "newsletters"
   ],
   "bin": {
     "aicc": "./bin/aicc.js"
