--- a/crawler/package.json
+++ b/crawler/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "@types/cheerio": "^0.22.30",
+    "@types/jest": "^30.0.0",
     "@types/node": "^18.0.0",
     "@types/react": "19.0.10",
     "ts-node": "^10.9.1",
