[AICC-42]: Implement Pinecone vector DB and related articles feature

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -18,3 +18,5 @@ PORT="3000"
 RESEND_API_KEY=
 RESEND_FROM="AI Curator <news@sonnguyenhoang.com>"
 UNSUBSCRIBE_BASE_URL="https://ai-content-curator-backend.vercel.app/api/newsletter/unsubscribe"
+PINECONE_API_KEY=
+PINECONE_INDEX=ai-gov-articles
