--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
+    "@pinecone-database/pinecone": "^6.1.2",
     "@vercel/node": "^5.1.10",
     "axios": "^1.2.0",
     "bcrypt": "^5.1.1",
@@ -23,6 +24,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^6.8.0",
+    "openai": "^6.7.0",
     "prettier": "^3.5.3",
     "serve-favicon": "^2.5.0",
     "swagger-jsdoc": "^6.2.8",
